--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cordova-plugin-app-scope",
-  "version": "1.0.0-dev",
+  "version": "1.0.0",
   "author": "Ayogo Health Inc. <info@ayogo.com>",
-  "description": "Cordova plugin for delegating handling of URL scopes to the application",
-  "private": true,
+  "description": "Cordova plugin for delegating handling of URL scopes to the application.",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AyogoHealth/cordova-plugin-app-scope.git"
