--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "cordova-plugin-app-scope",
   "version": "1.0.0",
   "author": "Ayogo Health Inc. <info@ayogo.com>",
+  "contributors": [
+    "Darryl Pogue <darryl@dpogue.ca>",
+    "Raul Souza <raul.souza@ayogo.com>",
+    "Stacey Vachon <hello@staceyvachon.com>"
+  ],
   "description": "Cordova plugin for delegating handling of URL scopes to the application.",
   "license": "Apache-2.0",
   "repository": {
