--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
       "name": "cordova-ios",
       "version": ">= 4.5.0"
     }
-  ]
+  ],
+  "dependencies": {
+    "elementtree": "^0.1.7"
+  }
 }
