--- a/plugin.xml
+++ b/plugin.xml
@@ -36,6 +36,8 @@
         <param name="ios-package" value="CDVAppScopePlugin" />
         <param name="onload" value="true" />
       </feature>
+
+      <preference name="SwiftVersion" value="4.0" />
     </config-file>
 
     <header-file src="src/ios/CDVAppDelegate+AppScope.h" />
